доработка openapi.yml, улучшенная обработка ошибок, подготовка к созданию эндпоинтов статистики и массовой деактивации пользователей
